# xfetch

./: .gitattributes  CONFIGURATION.md  Cargo.toml  INSTALLATION.md  LAYOUTS.md  LICENSE  PKGBUILD  README.md  ROADMAP.md  SECURITY.md  UNINSTALLATION.md  install.ps1  install.sh  project.md  uninstall.sh
configs/: config.jsonc  config_01.jsonc  config_02.jsonc  config_03.jsonc  config_04.jsonc  config_05.jsonc  config_06.jsonc  config_07.jsonc  config_08.jsonc  config_09.jsonc  config_10.jsonc  config_11_pacman.jsonc  config_12.jsonc  config_13.jsonc  config_14.jsonc  config_15.jsonc  config_16.jsonc  config_17.jsonc  config_18.jsonc  config_19.jsonc  config_20.jsonc  config_dots.jsonc  config_lines.jsonc  config_triangles.jsonc  layout_box_full.jsonc  layout_dots_full.jsonc  layout_pacman_full.jsonc  layout_section.jsonc  layout_side_block.jsonc  layout_tree.jsonc
logos/: arch.txt  minimal.txt  x_large.txt  x_logo.txt
packaging/xpkg/: XBUILD
src/: config.rs  info.rs  main.rs  ui.rs
