[package]
name = "xfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
console = "0.16.2"
crossterm = "0.29.0"
dirs = "6.0.0"
image = "0.25.9"
json_comments = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sysinfo = "0.37.2"
viuer = { version = "0.11.0", features = ["print-file"] }
